tests/ui/repeat.stderr
error: E::Aaa should sort before E::Bbb
  --> tests/ui/repeat.rs:12:9
   |
6  | #[remain::check]
   | ---------------- in this procedural macro expansion
...
12 |         E::Aaa(_) => {}
   |         ^^^^^^
   |
   = note: this error originates in the attribute macro `remain::check` (in Nightly builds, run with -Z macro-backtrace for more info)
